# Helios

./: LICENSE  README.md
agents/hello-world/: Cargo.toml
agents/hello-world/src/: main.rs
api/: .env.template  Cargo.toml
api/assets/: install_script_linux.sh
api/migrations/: 20250727103328_init.sql  20250727174712_device-last-scanned.sql  20250728152656_add-name-to-port.sql  20250729010251_add-token-to-service.sql
api/src/agents/dns/: Cargo.toml
api/src/core/common/: Cargo.toml
api/src/core/common/src/: config.rs  lib.rs
api/src/core/config_macro/: Cargo.toml
api/src/core/config_macro/src/: lib.rs
api/src/core/entities/: Cargo.toml
api/src/core/entities/src/: device.rs  lib.rs  network.rs  service.rs  utils.rs
api/src/core/entities/src/network/: mac_address.rs  mod.rs
api/src/core/ports/: Cargo.toml
api/src/core/ports/src/: agent_connection.rs  lib.rs
api/src/core/ports/src/api/: internet_provider.rs  mod.rs  router_api.rs
api/src/core/ports/src/repositories/: devices.rs  mod.rs  services.rs
api/src/domain/: Cargo.toml
api/src/domain/auth/adapter/: Cargo.toml
api/src/domain/auth/port/: Cargo.toml
api/src/domain/devices/adapter/: Cargo.toml
api/src/domain/devices/adapter/src/: lib.rs
api/src/domain/devices/port/: Cargo.toml
api/src/domain/devices/port/src/: lib.rs
api/src/domain/dns/adapter/: Cargo.toml
api/src/domain/dns/port/: Cargo.toml
api/src/domain/network/adapter/: Cargo.toml
api/src/domain/network/port/: Cargo.toml
api/src/domain/src/: agent_ping.rs  create_service.rs  fetch_network_status.rs  generate_install_script.rs  handle_agent_websocket.rs  lib.rs  list_devices.rs  list_service_templates.rs  list_services.rs  sync_devices.rs
api/src/infrastructure/agent_connection/: Cargo.toml
api/src/infrastructure/agent_connection/src/: lib.rs
api/src/infrastructure/dns_agent_api/adapter/: Cargo.toml
api/src/infrastructure/dns_agent_api/port/: Cargo.toml
api/src/infrastructure/internet_provider_api/: Cargo.toml
api/src/infrastructure/internet_provider_api/adapter/: Cargo.toml
api/src/infrastructure/internet_provider_api/adapter/src/: lib.rs
api/src/infrastructure/internet_provider_api/port/: Cargo.toml
api/src/infrastructure/internet_provider_api/port/src/: bouygues.rs
api/src/infrastructure/internet_provider_api/src/: bouygues.rs  lib.rs
api/src/infrastructure/repositories/: Cargo.toml
api/src/infrastructure/repositories/adapter/: Cargo.toml
api/src/infrastructure/repositories/adapter/src/: devices.rs  lib.rs  services.rs
api/src/infrastructure/repositories/port/: Cargo.toml
api/src/infrastructure/repositories/port/src/: devices.rs  services.rs
api/src/infrastructure/repositories/src/: devices.rs  lib.rs  services.rs
api/src/infrastructure/router_api/: Cargo.toml
api/src/infrastructure/router_api/src/: bouygues.rs
api/src/interface/cron/: Cargo.toml
api/src/interface/cron/src/: lib.rs  main.rs
api/src/interface/rest/: Cargo.toml
api/src/interface/rest/server/: Cargo.toml
api/src/interface/rest/server/src/: main.rs
api/src/interface/rest/server/src/devices/: list.rs  mod.rs
api/src/interface/rest/server/src/network/: mod.rs
api/src/interface/rest/src/: main.rs  response.rs
api/src/interface/rest/src/agents/: mod.rs  websocket.rs
api/src/interface/rest/src/devices/: list.rs  mod.rs
api/src/interface/rest/src/extractors/: json.rs  mod.rs  query.rs
api/src/interface/rest/src/network/: get.rs  mod.rs
api/src/interface/rest/src/service_templates/: list.rs  mod.rs
api/src/interface/rest/src/services/: create.rs  install_script.rs  mod.rs
api/src/protocol/: Cargo.toml
api/src/protocol/src/: error.rs  lib.rs
api/src/protocol/src/handshake/: client.rs  mod.rs  server.rs
api/src/protocol/src/message/: core.rs  mod.rs
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx  store.ts  vite-env.d.ts
frontend/src/api/: apiClient.ts
frontend/src/components/: DeviceList.tsx  DeviceListItem.tsx  NetworkStats.tsx  WanIpDisplay.tsx
frontend/src/components/dialogs/: AddServiceDialog.tsx  StepperDialog.tsx
frontend/src/components/forms/: ServiceSpecificationForm.tsx
frontend/src/components/layout/: Header.tsx  PageLayout.tsx
frontend/src/components/ui/: Button.tsx  Dialog.tsx  DropdownMenu.tsx  Form.tsx  Progress.tsx  Select.tsx  Skeleton.tsx
frontend/src/features/: devices.slice.ts  index.ts  network.slice.ts  service-templates.slice.ts  services.slice.ts
frontend/src/hooks/: index.ts  use-form-field.ts  use-toast.ts
frontend/src/lib/: format.ts
frontend/src/models/: device.model.ts  index.ts  network.model.ts  service-template.model.ts  service.model.ts
frontend/src/pages/: Dashboard.tsx
