[workspace]
members = [
    # Common stuff used by all other crates
    "src/core/common",
    "src/core/entities",
    "src/core/ports",
    "src/core/config_macro",

    # Interfaces are used by the clients of the API.
    "src/interface/rest",
    "src/interface/cron",

    "src/domain",

    # Infrastructure is the API external services layer.
    "src/infrastructure/repositories",
    "src/infrastructure/internet_provider_api", # API used to obtain information about the network and manage it
]
resolver = "3"

[workspace.dependencies]
common = { path = "src/core/common" }
entities = { path = "src/core/entities" }
ports = { path = "src/core/ports" }
internet-provider-api = { path = "src/infrastructure/internet_provider_api" }
repositories = { path = "src/infrastructure/repositories" }
domain = { path = "src/domain" }
config_macro = { path = "src/core/config_macro" }

async-trait = "0.1.88"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
strum = { version = "0.27.2", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_path_to_error = "0.1.17"
url = "2.5.4"
axum = { version = "0.8.4", features = ["json", "macros", "ws"] }
axum-distributed-routing = "0.1.3"
dotenv = "0.15.0"
tower-http = { version = "0.6.6", features = ["cors"] }
serde_with = { version = "3.14.0", features = ["chrono_0_4"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }
futures = "0.3.31"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "derive",
    "macros",
    "uuid",
    "ipnetwork",
    "mac_address",
    "chrono",
] }
mac_address = { version = "1.1.8", features = ["serde"] }
itertools = "0.14.0"
rand = "0.9.2"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
thiserror = "2.0.12"
