[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
futures = "0.3"
url = "2.5.4"
serde = { version = "1", features = ["derive"] }
toml = "0.9.3"

[target.'cfg(windows)'.dependencies]
known-folders = "1.3.1"
