[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
entities.workspace = true
ports.workspace = true
mac_address.workspace = true
async-trait.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
validator.workspace = true
tracing.workspace = true
futures-util.workspace = true
protocol.workspace = true
