[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures-util.workspace = true
hmac.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
ports.workspace = true
thiserror.workspace = true
tracing.workspace = true
