[package]
name = "router-api"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
ports.workspace = true
entities.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
validator.workspace = true
