[package]
name = "cron"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
domain.workspace = true
router-api.workspace = true
repositories.workspace = true
ports.workspace = true

tokio.workspace = true
sqlx.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
thiserror.workspace = true
