[package]
name = "rest"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
entities.workspace = true
ports.workspace = true
domain.workspace = true
internet-provider-api.workspace = true
repositories.workspace = true

tokio.workspace = true
axum.workspace = true
axum-distributed-routing.workspace = true
serde.workspace = true
tower-http.workspace = true
futures.workspace = true
sqlx.workspace = true
uuid.workspace = true
