[package]
name = "rest"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
entities.workspace = true
ports.workspace = true
domain.workspace = true
router-api.workspace = true
repositories.workspace = true

tokio.workspace = true
axum.workspace = true
axum-distributed-routing.workspace = true
serde.workspace = true
tower-http.workspace = true
futures.workspace = true
sqlx.workspace = true
uuid.workspace = true
serde_json.workspace = true
anyhow.workspace = true
validator.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
