[package]
name = "ip-api-port"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
ip-api-adapter.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
strum.workspace = true
chrono.workspace = true
serde_path_to_error.workspace = true
entities.workspace = true
